--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -17,8 +17,8 @@
 				                    		{% for value in dict.excursion %}
 				                    			<p>
 				                    			{{ value.facility }},
-				                    			{{ value.occasion_excursion }},
-				                    			{{ value.date_excursion }}</p>
+				                    			{{ value.occasion }},
+				                    			{{ value.date }}</p>
 				                    		{% endfor %}
 			                    	</a>
 			                    	{% endif %}
@@ -27,8 +27,8 @@
 				                    		{% for value in dict.excursion %}
 				                    			<p>
 				                    			{{ value.facility }},
-				                    			{{ value.occasion_excursion }},
-				                    			{{ value.date_excursion }}</p>
+				                    			{{ value.occasion }},
+				                    			{{ value.date }}</p>
 				                    		{% endfor %}
 			                    	</a>
 			                    	{% endif %}
