--- a/app/templates/submitted.html
+++ b/app/templates/submitted.html
@@ -3,6 +3,6 @@
 {% block content %}
 
 {{ result }}<br>
-<a class="btn btn-primary" href="/" style="margin-top: 20px;">HOME</a>
+<a class="btn btn-block btn-primary" href="/" style="margin-top: 20px;">HOME</a>
 
 {% endblock %}
