--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,6 +46,7 @@
     <link   href="{%  static 'css/skins/skin-blue.min.css' %}" rel="stylesheet">
     <link   href="{%  static 'css/clockpicker.css' %}" rel="stylesheet">
     <link   href="{%  static 'css/standalone.css' %}" rel="stylesheet">
+    <link   href="{%  static 'css/dataTables.bootstrap4.css' %}" rel="stylesheet">
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
@@ -150,7 +151,7 @@
             System of organization and accounting of excursions in <b>JINR</b>
           </h1>
         </section>
-        <div>
+        <div class="content">
           {% block content %}
             {% endblock %}
         </div>
@@ -189,5 +190,7 @@
     </script>
     <script src="{% static 'js/app.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/clockpicker.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/jquery.dataTables.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/dataTables.bootstrap4.js' %}" type="text/javascript"></script>
     </body>
 </html>
