--- a/app/templates/excursion_info.html
+++ b/app/templates/excursion_info.html
@@ -3,10 +3,15 @@
 
 {% block content %}
 
-<label id="changefield_info" style="padding:5px 40px; background-color: #f0ad4e;"><span class="glyphicon glyphicon-pencil"></span> To change some field just enter a new value and click CHANGE EXCURSION</label>
+<section class="content-header">
+  <h4><i class="fas fa-eye"></i> <b>View application</b></h4>
+</section><br>
 
+<label id="changefield_info" style="padding:5px 40px; background-color: #f0ad4e;"><i class="fas fa-exclamation-circle"></i> To change some field just enter a new value and click CHANGE EXCURSION</label>
+
+<div id="formDiv">
 <form style="margin-top: 15px;" id="myForm" action="change_excursion/{{ desired_excursion.id_excursion }}/" method="post">{% csrf_token %}
-	<table class="table bg-info">
+	<table class="table card">
 		<tr id="row1">
 			<th id="th_user_can_edit_form">
 				<!-- {{ desired_excursion.is_confirmed }} -->
@@ -26,30 +31,31 @@
 	    	</th>
 	    </tr>
 
-		<tr id="row2">		
+		<tr id="row2">
 			<th colspan="2">{{ form.organizator|as_crispy_field }}</th>
 	    	<th>{{ form.guide|as_crispy_field }}</th>
 	    	<th>{{ form.incharge|as_crispy_field }}</th>
-	    	<th>{{ form.occasion_excursion|as_crispy_field }}</th>
-	    	<th>{{ form.date_excursion|as_crispy_field }}</th>
+	    	<th>{{ form.occasion|as_crispy_field }}</th>
+	    	<th>{{ form.date|as_crispy_field }}</th>
 	    </tr>
 
 	    <tr id="row3">
-	    	<th colspan="2">{{ form.time_period_excursion|as_crispy_field }}</th>
-	    	<th>{{ form.language_excursion|as_crispy_field }}</th>
-	    	<th>{{ form.auditory_excursion|as_crispy_field }}</th>
-			<th>{{ form.participants_excursion|as_crispy_field }}</th>
+	    	<th colspan="2">{{ form.start_time|as_crispy_field }}</th>
+	    	<th>{{ form.stop_time|as_crispy_field }}</th>
+	    	<th>{{ form.language|as_crispy_field }}</th>
+	    	<th>{{ form.auditory|as_crispy_field }}</th>
+			<th>{{ form.participants|as_crispy_field }}</th>
 	    </tr>
 	</table>
-	<a role="button" id="bt_back" class="btn btn-primary" onclick="history.back()" style="float: left;">GO BACK</a>
-	
 	<input type="submit" style="display: none;"/>
 </form>
+<a role="button" id="bt_back" class="btn btn-primary" onclick="history.back()" style="margin-right: auto;">GO BACK</a>
+</div>
 
 <!-- MODAL FOR CHANGING EXCURSION DATA -->
 <div class="modal fade" id="myModal_change" role="dialog">
     <div class="modal-dialog">
-    
+
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header" style="padding:25px 50px; background-color: #f0ad4e;">
@@ -65,10 +71,8 @@
           <button id="modal_submit_changes" type="submit" class="btn btn-success" onclick="submit_changes()"><span class="glyphicon glyphicon-ok"></span> Yes, I'm sure</button>
         </div>
       </div>
-      
     </div>
-  </div> 
-</div>
+  </div>
 
 <!-- Блок для отображения чата -->
 <div class="panel">
@@ -114,14 +118,14 @@
 
 
 <script type="text/javascript">
-	$(window).load(function() {
+	$(window).on('load', function(){
 
 		if ($.trim($('#th_user_can_edit_form').text()) == 'False') {
 
 			$('#th_user_can_edit_form').text('{{ desired_excursion.is_confirmed }}');
 			if ($.trim($('#th_user_can_edit_form').text()) == 'False') {
-				$('#myForm').append(
-				'<a id="bt_confirm" class="btn btn-warning" style="float: right;" href="change_confirmed/" onclick="this.style.display=\'none\'; return true;">CONFIRM EXCURSION</a>'
+				$('#formDiv').append(
+				'<a id="bt_confirm" class="btn btn-warning" style="display: block; margin-left: auto;" href="change_confirmed/" onclick="this.style.display=\'none\'; return true;">CONFIRM EXCURSION</a>'
 				)
 			}
 
@@ -132,30 +136,31 @@
 			$('#id_facility').attr('disabled', true);
 		}
 		else {
-			$('#myForm').append(
-				'<button id="bt_change" class="btn btn-warning" style="float: right;" data-toggle="modal" data-target="#myModal_change">CHANGE EXCURSION</button>'
+			$('#formDiv').append(
+				'<button id="bt_change" class="btn btn-warning" style="display: block; margin-left: auto;" data-toggle="modal" data-target="#myModal_change">CHANGE EXCURSION</button>'
 			)
 
 			$('#th_user_can_edit_form').text('{{ desired_excursion.is_confirmed }}');
 
 			if ($.trim($('#th_user_can_edit_form').text()) == 'False') {
 				$('#th_user_can_edit_form').text("This excursion is not confirmed by guide or/and incharge");
-				$('#th_user_can_edit_form').addClass("bg-danger text-danger");
+				$('#th_user_can_edit_form').addClass("text-danger");
 			}
 			else {
-				$('#th_user_can_edit_form').text("This excursion confirmed by guide and incharge");
-				$('#th_user_can_edit_form').addClass("bg-success text-success");
+				$('#th_user_can_edit_form').text("This excursion is confirmed by guide and incharge");
+				$('#th_user_can_edit_form').addClass("text-success");
 			}
 		}
 
 		id_facility = $("#id_facility").val();
+		console.log(id_facility)
 
 		$.ajax ({
 	            url: "../../../blank/get_areas/",
 	            type: "post",
 	            data: {
 	            	csrfmiddlewaretoken: getCookie('csrftoken'),
-	                'id_facility': id_facility,
+	                'facility': id_facility,
 	            },
 	            success: function(data) {
 	            	// if current area doesn't belong to current facility then
