--- a/app/templates/excursion_info.html
+++ b/app/templates/excursion_info.html
@@ -10,7 +10,7 @@
 <label id="changefield_info" style="padding:5px 40px; background-color: #f0ad4e;"><i class="fas fa-exclamation-circle"></i> To change some field just enter a new value and click CHANGE EXCURSION</label>
 
 <div id="formDiv">
-<form style="margin-top: 15px;" id="myForm" action="change_excursion/{{ desired_excursion.id_excursion }}/" method="post">{% csrf_token %}
+<form style="margin-top: 15px;" id="myForm" action="{% url 'app:change_excursion' desired_excursion.id %}" method="post">{% csrf_token %}
 	<table class="table card">
 		<tr id="row1">
 			<th id="th_user_can_edit_form">
@@ -49,7 +49,7 @@
 	</table>
 	<input type="submit" style="display: none;"/>
 </form>
-<a role="button" id="bt_back" class="btn btn-primary" onclick="history.back()" style="margin-right: auto;">GO BACK</a>
+<a role="button" id="bt_back" class="btn btn-primary" onclick="history.back()" style="float: left;">GO BACK</a>
 </div>
 
 <!-- MODAL FOR CHANGING EXCURSION DATA -->
@@ -212,7 +212,7 @@
 		})
 
 		$('#bt_change').on('click', function(e){
-		  $('#myModal').modal('show');
+		  $('#myModal_change').modal('show');
 		  e.preventDefault();
 		});
 	})
