--- a/app/templates/excursion_info.html
+++ b/app/templates/excursion_info.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
-
+{% load tz %}
 {% block content %}
 
 <section class="content-header">
@@ -49,7 +49,7 @@
 	</table>
 	<input type="submit" style="display: none;"/>
 </form>
-<a role="button" id="bt_back" class="btn btn-primary" onclick="history.back()" style="float: left;">GO BACK</a>
+<a role="button" id="bt_back" class="btn btn-primary" href="{% url 'app:view_excursions' %}" style="float: left;">GO BACK</a>
 </div>
 
 <!-- MODAL FOR CHANGING EXCURSION DATA -->
@@ -75,6 +75,7 @@
   </div>
 
 <!-- Блок для отображения чата -->
+<br><br>
 <div class="panel">
 	{% if chat.error %}
 		<h5>{{ chat.error }}</h5>
@@ -106,9 +107,9 @@
 				<label>Enter your message</label>
 				<form id="message-form" method="post" action="send_message/{{ val.id }}/">
 					{% csrf_token %}
-					{{ form_message }}
+					<p>{{ form_message }}</p>
 					<button type="submit" class="btn btn-success">
-						<span class="glyphicon glyphicon-comment"></span> Send
+						<span class="fas fa-comment"></span> Send
 					</button>
 				</form>
 			</div>
@@ -120,20 +121,21 @@
 <script type="text/javascript">
 	$(window).on('load', function(){
 
-		// if ($.trim($('#th_user_can_edit_form').text()) == 'False') {
+	$('#id_message').addClass('form-control');
     {% if user_can_edit_form == False %}
     {
-			$('#th_user_can_edit_form').text('{{ desired_excursion.is_confirmed }} + {{ desired_excursion.held }}');
-			if ($.trim($('#th_user_can_edit_form').text()) == 'False') {
-				$('#formDiv').append(
-				'<a id="bt_confirm" class="btn btn-warning" style="display: block; margin-left: auto;" href="change_confirmed/" onclick="this.style.display=\'none\'; return true;">CONFIRM EXCURSION</a>'
+		{% if desired_excursion.is_confirmed == False %}
+			$('#formDiv').append(
+				'<a id="bt_confirm" class="btn btn-warning" style="margin-left: auto;" href="change_confirmed/" onclick="this.style.display=\'none\'; return true;">CONFIRM EXCURSION</a>'
 				)
-			}
-      $('#th_user_can_edit_form').hide();
-			$('#changefield_info').hide();
-			$("#myForm :input").prop('readonly', true);
-			$('#id_guide').attr('disabled', true);
-			$('#id_facility').attr('disabled', true);
+		{% else %}
+			$('#myForm').append("<h4><span class=\"badge badge-warning\">You have already confirmed this excursion</span></h4>");
+		{% endif %}
+      	$('#th_user_can_edit_form').hide();
+		$('#changefield_info').hide();
+		$("#myForm :input").prop('readonly', true);
+		$('#id_guide').attr('disabled', true);
+		$('#id_facility').attr('disabled', true);
     }
 
 		{% else %}
@@ -148,14 +150,22 @@
 			{% else %}
         $('#th_user_can_edit_form').text("This excursion is confirmed by guide and incharge.");
         $('#th_user_can_edit_form').addClass("text-success");
-        {% if desired_excursion.held == False %}
+        {% if desired_excursion.not_held == True %}
           $('#th_user_can_edit_form').append("<br><br><span style=\"color: red;\">This excursion has not been held yet.</span>");
         {% else %}
-          $('#th_user_can_edit_form').append("<br><br><span>This excursion has been held.</span>");
+          {% load tz %}
+              {% now "Y-m-d" as current_date %}
+              {% now "H:i:s" as current_time %}
+              {% if current_date <= desired_excursion.date|date:"Y-m-d" and current_time < desired_excursion.start_time|date:"H-i-s" %}
+                $('#th_user_can_edit_form').append("<br><br><span style=\"color: gray;\">This excursion will be held.</span>");
+              {% else %}
+                {% if current_date >= desired_excursion.date|date:"Y-m-d" and current_time >= desired_excursion.start_time|date:"H-i-s" %}
+                  $('#th_user_can_edit_form').append("<br><br><span>This excursion has been held.</span>");
+                {% endif %}
+              {% endif %}
         {% endif %}
       {% endif %}
     }
-
     {% endif %}
 
 		id_facility = $("#id_facility").val();
