Improved appearance and chart development has started

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -129,7 +129,7 @@
                           </span>
                       </a>
                       <ul class="treeview-menu">
-                        <li><a href="#">Link in level 2</a></li>
+                        <li><a href="{% url 'app:view_facilities_attendace' %}">Facilities</a></li>
                         <li><a href="#">Link in level 2</a></li>
                       </ul>
                     </li>
