--- a/app/templates/excursion_form.html
+++ b/app/templates/excursion_form.html
@@ -28,7 +28,7 @@
 	</div>
 	<div class="row">
         <div class="col">
-			{{ form.occasion|as_crispy_field }}
+			{{ form.event|as_crispy_field }}
 		</div>
     </div>
 	<div class="row">
@@ -53,7 +53,7 @@
     </div>
 	<div class="row">
         <div class="col">
-			{{ form.auditory|as_crispy_field }}
+			{{ form.target_audience|as_crispy_field }}
 		</div>
     </div>
 	<div class="row">
